fix draggable segment on firefox

--- a/assembl/static/css/layout/_ideaPanel.scss
+++ b/assembl/static/css/layout/_ideaPanel.scss
@@ -112,3 +112,17 @@
     font-weight: 600;
   }
 }
+
+.ideaPanel {
+  .postitlist {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px dashed transparent;
+  }
+  &.is-dragover {
+    .postitlist {
+       border: 1px dashed #cccccc;
+      @include border-radius(3px);
+    }
+  }
+}
