--- a/assembl/static/css/layout/_segmentList.scss
+++ b/assembl/static/css/layout/_segmentList.scss
@@ -15,3 +15,18 @@
 .panel-body {
   top: 0;
 }
+
+.clipboard {
+  .postitlist {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px dashed transparent;
+  }
+  &.is-dragover {
+    .postitlist {
+       border: 1px dashed #cccccc;
+      @include border-radius(3px);
+    }
+  }
+}
+
